Alterado chave da API Jsearch e outras alterações
Melhorado layout, adicionado link do GitHub para o projeto

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 html, body {
     overscroll-behavior: none;
 }
+#row_container {
+    max-width: 1400px;
+}
 /* inicio dos estilos de index.php */
 body h2 {
     font-size: 1.25rem;
